--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 
 code {
@@ -18,5 +18,5 @@ code {
 }
 
 html {
-  background-color: #000000;
+  background-color: #ffffff;
 }
